maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:11: error: ';' expected but ')' found.
 {droite();if (estFaceMur()) {droite(); if (estFaceMur()){droite()})}; avance()}
                                                                   ^